force-app/main/default/objects/enquetedeSatisfaction__c/fields/suggestionssurlaMADdesoutils__c.field-meta.xml
<CustomField>
    <fullName>suggestionssurlaMADdesoutils__c</fullName>
    <label>Suggestions sur la MAD des outils</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>