force-app/main/default/objects/enquetedeSatisfaction__c/fields/TelContact__c.field-meta.xml
<CustomField>
    <fullName>TelContact__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone du Contact</label>
    <type>Text</type>
</CustomField>