force-app/main/default/objects/enquetedeSatisfaction__c/fields/Telephone_de_la_lead__c.field-meta.xml
<CustomField>
    <fullName>Telephone_de_la_lead__c</fullName>
    <formula>Lead__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone de la lead</label>
    <type>Text</type>
</CustomField>