force-app/main/default/objects/enquetedeSatisfaction__c/fields/typedenquete__c.field-meta.xml
<CustomField>
    <fullName>typedenquete__c</fullName>
    <label>Type d&#39;enquête</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 sem après le 1er RDV</fullName>
            </value>
            <value>
                <fullName>3 sem après l&#39;envoi du Bilan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>