force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/Crea.recordType-meta.xml
<RecordType>
    <fullName>Crea</fullName>
    <active>true</active>
    <label>Crea</label>
</RecordType>