force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/Crea_suite_Kbis_J_3.recordType-meta.xml
<RecordType>
    <fullName>Crea_suite_Kbis_J_3</fullName>
    <active>true</active>
    <label>Crea suite Kbis J+3</label>
</RecordType>