force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/J10AfterExternalTransfer.recordType-meta.xml
<RecordType>
    <fullName>J10AfterExternalTransfer</fullName>
    <active>true</active>
    <label>J+10 Suite au Transfert Externe</label>
</RecordType>