force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/J5AfterInternalTransfer.recordType-meta.xml
<RecordType>
    <fullName>J5AfterInternalTransfer</fullName>
    <active>true</active>
    <label>J+5 Suite au Transfert Interne</label>
</RecordType>