force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/J_7_suite_transfert_externe.recordType-meta.xml
<RecordType>
    <fullName>J_7_suite_transfert_externe</fullName>
    <active>false</active>
    <label>J+7 suite transfert externe</label>
</RecordType>