force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/Partenaire_EC.recordType-meta.xml
<RecordType>
    <fullName>Partenaire_EC</fullName>
    <active>false</active>
    <label>EC Partenaire</label>
</RecordType>