force-app/main/default/objects/enquetedeSatisfaction__c/recordTypes/Prise_de_contact.recordType-meta.xml
<RecordType>
    <fullName>Prise_de_contact</fullName>
    <active>true</active>
    <label>Prise de contact</label>
</RecordType>