force-app/main/default/objects/enquetedeSatisfaction__c/validationRules/note_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>note_complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $User.BypassValidationRules__c = false,
    OR(
        AND(
            RecordType.DeveloperName=&quot;Crea_suite_Kbis_J_3&quot;,
            OR(
                ISBLANK(TEXT(notedeSatisfactionGlobale__c)),
                ISBLANK(TEXT(Simplicite_du_process__c)),
                ISBLANK(TEXT(RepresentativeSkillsNotes__c ))
            ),

            OR(
               NOT(ISBLANK(TEXT(notedeSatisfactionGlobale__c))),
                NOT(ISBLANK(TEXT(Simplicite_du_process__c))),
                NOT(ISBLANK(TEXT(RepresentativeSkillsNotes__c )))
            )    
        ),
								
        AND(
								RecordType.DeveloperName=&quot;Prise_de_contact&quot;,
								OR( 
												ISBLANK(TEXT(notedeSatisfactionPrisecontact__c)),
            ISBLANK(TEXT( Evaluation_a_posteriori__c ))
								),
OR( 
												NOT(ISBLANK(TEXT(notedeSatisfactionPrisecontact__c))),
            NOT(ISBLANK(TEXT( Evaluation_a_posteriori__c )))
								)
								
								),
												
        AND( OR(
        RecordType.DeveloperName=&quot;J10AfterExternalTransfer&quot;,
        RecordType.DeveloperName=&quot;J5AfterInternalTransfer&quot;), 
												
												OR(
																ISBLANK(TEXT(notedeSatisfactionGlobale__c)),
							         ISBLANK(TEXT(RepresentativeReactivityNote__c )),
 							        ISBLANK(TEXT(RepresentativeSkillsNotes__c )),
							         ISBLANK(TEXT(NotePropale__c))
								),
OR(
																NOT(ISBLANK(TEXT(notedeSatisfactionGlobale__c))),
							         NOT(ISBLANK(TEXT(RepresentativeReactivityNote__c ))),
 							        NOT(ISBLANK(TEXT(RepresentativeSkillsNotes__c ))),
							         NOT(ISBLANK(TEXT(NotePropale__c)))
								)
    
    )
)
				)</errorConditionFormula>
    <errorMessage>Il faut remplir l&#39;ensemble des notes pour passer à l&#39;etape Realisée</errorMessage>
</ValidationRule>