force-app/main/default/objects/enquetedeSatisfaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Lead__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partenaire_interne__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Tout</label>
</ListView>