force-app/main/default/objects/enquetedeSatisfaction__c/listViews/Enquetes_realiser_suite_transfert.listView-meta.xml
<ListView>
    <fullName>Enquetes_realiser_suite_transfert</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Number__c</columns>
    <columns>Partner__c</columns>
    <columns>Statut__c</columns>
    <columns>CompletionDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>New,Call 1,Call 2</value>
    </filters>
    <filters>
        <field>CompletionDate__c</field>
        <operation>greaterThan</operation>
        <value>2/10/2019</value>
    </filters>
    <filters>
        <field>Partner__c</field>
        <operation>notEqual</operation>
        <value>tiime</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>enquetedeSatisfaction__c.J10AfterExternalTransfer,enquetedeSatisfaction__c.J5AfterInternalTransfer</value>
    </filters>
    <filters>
        <field>CompletionDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Enquêtes à réaliser suite au transfert</label>
</ListView>