force-app/main/default/objects/enquetedeSatisfaction__c/listViews/Les_enquetes_realiser_Tiime_Crea.listView-meta.xml
<ListView>
    <fullName>Les_enquetes_realiser_Tiime_Crea</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CompletionDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>enquetedeSatisfaction__c.Crea_suite_Kbis_J_3</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>notEqual</operation>
        <value>Done,Failed,DoNotCall</value>
    </filters>
    <label>Les enquêtes à réaliser Tiime Créa</label>
</ListView>